# create_parsons_debug

./: README.md  __init__.py  pyproject.toml
create_parsons.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
create_parsons_debug.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
output/: rearrange_problem.html  test_problem.html  toggle_problem.html
scripts/: __init__.py  create_debug_problems.py  create_rearrange_problem.py  create_toggle_problem.py  debug_problems.py  make_bundle.py  rearrange_problems.py
static/: parsons.css
templates/: template_rearrange.html  template_toggle.html  template_toggle2.html
tests/student_tests/: debug_test.py  rearrange_test.py  toggle_test.py
